# hackathon-two-phase-two

./: .gitignore  CLAUDE.md  DATABASE_LOCATION.md  DEBUGGING_INSTRUCTIONS.md  DEBUG_KIT_SUMMARY.md  DEBUG_WORKFLOW.md  Ehumanoid-bookphase-2frontend.env.local  README.md  README_DEBUG.md  TASK_CREATION_DEBUG.md  create_tables.py  pyproject.toml  test_db_connection.py
.claude/: settings.local.json
.claude/agents/: auth-jwt-agent.md  backend-api-dev.md  frontend-implementer.md  integration-orchestrator.md  sqlmodel-database-architect.md
.claude/skills/frontend-backend-integration/: SKILL.md
.claude/skills/frontend-doc-writer/: SKILL.md
.claude/skills/todo-app-tester/: SKILL.md
.claude/skills/todo-db-guide/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  BACKEND_GUIDE.md  README.md
backend/alembic/: env.py
backend/app/: dependencies.py  main.py
backend/scripts/: verify_db.py
frontend/: FRONTEND_GUIDE.md  package-lock.json  package.json
frontend/scripts/: create-auth-tables.sql
specs/001-backend-task-api/: plan.md  tasks.md
specs/001-db-schema-phase2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-integration-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-frontend/: spec.md
specs/003-todo-frontend/: CHANGELOG-2026-02-06.md  IMPLEMENTATION-STATUS-2026-02-06.md  VALIDATION-REPORT-2026-02-06.md  data-model.md  performance-testing.md  plan.md  quickstart.md  research.md  spec.md  task-requirement-mapping.md  tasks.md
specs/database/: schema.md
(+72 files in other folders)
